--- a/html5up-stellar/index.html
+++ b/html5up-stellar/index.html
@@ -44,37 +44,21 @@
 										<header class="major">
 											<h2>Introduction</h2>
 										</header>
-										<p>I am Anne, a Full Stack Developer. I love....eventually I will have more to say</p>
+										<p>I am Anne, a Full Stack Developer. I love learning new things and working with people. I am from Minnesota and currently reside In Minneapolis, MN. </p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/bridge.jpg" alt="" /></span>
+									<span class="image"><img src="images/bridge.jpg" alt="picture of famous Bridge in Minneapolis" /></span>
 								</div>
 							</section>
 
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2> CSS Projects</h2>
 								</header>
-								<ul class="features">
-									<li>
-										<span class="icon major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-diamond"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-								</ul>
+								
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
