--- a/html5up-stellar/index.html
+++ b/html5up-stellar/index.html
@@ -28,9 +28,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">HTML5 and CSS Projects</a></li>
-							<li><a href="#second">Javascript</a></li>
-							<li><a href="#cta">More</a></li>
+							<li><a href="#first">First Section</a></li>
+							<li><a href="#second">Second Section</a></li>
+							<li><a href="#cta">Get Started</a></li>
 						</ul>
 					</nav>
 
@@ -56,7 +56,7 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2> HTML5 and CSS Projects</h2>
+									<h2> CSS Projects</h2>
 								</header>
 								
 								<footer class="major">
